--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
+certifi==2024.6.2
+charset-normalizer==3.3.2
+idna==3.7
+numpy==2.0.0
 pandas==2.2.2
-psycopg2_binary==2.9.9
+psycopg2-binary==2.9.9
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.1
+redis==5.0.7
+requests==2.32.3
+six==1.16.0
 spotipy==2.23.0
+tzdata==2024.1
+urllib3==2.2.2
